--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "client",
-  "private": true,
+  "name": "next-tsc-tailwind",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,13 +13,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.3",
-    "@types/react": "18.0.17",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
     "autoprefixer": "^10.4.8",
     "eslint": "8",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   }
 }
