--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "next-tsc-tailwind",
   "private": false,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "concurrently \"next dev --turbo\" \"pnpm tailwind --watch\"",
+    "build": "pnpm tailwind && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tailwind": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css"
   },
   "dependencies": {
-    "next": "12.2.5",
+    "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -16,11 +17,12 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
+    "eslint": "^8.28.0",
     "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.2"
   }
 }
